objects/Speaker__c/fields/Bio__c.field-meta.xml
<CustomField>
    <fullName>Bio__c</fullName>
    <description>Professional biography</description>
    <label>Bio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>