objects/Speaker__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Event where this speaker is presenting</description>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Speakers</relationshipLabel>
    <relationshipName>Speakers</relationshipName>
    <type>Lookup</type>
</CustomField>