objects/Speaker__c/fields/Expertise__c.field-meta.xml
<CustomField>
    <fullName>Expertise__c</fullName>
    <description>Subject matter expertise areas</description>
    <label>Expertise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>