objects/Speaker__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <description>Speaker's organization or company affiliation</description>
    <label>Organization</label>
    <length>120</length>
    <type>Text</type>
</CustomField>