objects/Speaker__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Contact phone number of the speaker</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>