objects/Speaker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Organization__c</columns>
    <columns>Expertise__c</columns>
    <columns>Status__c</columns>
    <columns>Event__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Speakers</label>
</ListView>